# lattice

./: Cargo.toml
src/: lib.rs  mic.rs  supercell.rs  utils.rs
tests/: basic.rs  mic.rs
