# [[file:~/Workspace/Programming/gchemol-rs/lattice/lattice.note::*cargo][cargo:1]]
[package]
name = "gchemol-lattice"
version = "0.1.0"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Periodic 3D crystal lattice"
homepage = "https://github.com/gchemol/lattice"
repository = "https://github.com/gchemol/lattice"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
serde = {version="1", features = ["derive"]}
vecfx = {version="0.1.2", features = ["nalgebra"]}
gchemol-gut = "0.1.3"

[dev-dependencies]
approx = "0.3"

[features]
adhoc = [] # for adhoc hacking
# cargo:1 ends here
