# [[file:lattice.note::ecbf527c][ecbf527c]]
[package]
name = "gchemol-lattice"
version = "0.1.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Periodic 3D crystal lattice"
homepage = "https://github.com/gchemol/lattice"
repository = "https://github.com/gchemol/lattice"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]

[dependencies]
serde = {version="1", features = ["derive"]}
vecfx = {version="0.1.2", features = ["nalgebra"]}
gchemol-gut = "0.4"

[dev-dependencies]

[features]
adhoc = [] # for adhoc hacking
# ecbf527c ends here
